# CRAbE

./: .gitignore  Cargo.toml  README.md  TODO.md  main.py
crates/crabe/: Cargo.toml
crates/crabe/src/: data_receiver.rs  gamepad_pipeline.rs  gc.rs  lib.rs  main.rs  types.rs  vision.rs  world.rs
crates/crabe_ai/: Cargo.toml
crates/crabe_ai/src/: action.rs  lib.rs  manager.rs  pipeline.rs  strategy.rs
crates/crabe_ai/src/action/: move_to.rs  order_raw.rs  sequencer.rs  state.rs
crates/crabe_ai/src/manager/: manual.rs
crates/crabe_ai/src/strategy/: square.rs  testing.rs
crates/crabe_common/: Cargo.toml
crates/crabe_common/src/: cli.rs  lib.rs
crates/crabe_decision/: Cargo.toml
crates/crabe_decision/src/: action.rs  constants.rs  lib.rs  manager.rs  message.rs  pipeline.rs  strategy.rs  utils.rs
crates/crabe_decision/src/action/: go_to.rs  move_to.rs  move_to_pid.rs  opt_pass.rs  order_raw.rs  orient_to.rs  sequencer.rs
crates/crabe_decision/src/manager/: bigbro.rs  game_manager.rs  manual.rs  test_manager.rs
crates/crabe_decision/src/strategy/: attacker.rs  basics.rs  defender.rs  defensive.rs  formations.rs  keeper.rs  offensive.rs  placement.rs  testing.rs
crates/crabe_decision/src/strategy/attacker/: attacker.rs  passer.rs  shooter.rs  waiter.rs
crates/crabe_decision/src/strategy/basics/: comeback.rs  intercept.rs  move_away_from_point.rs  pass.rs  shoot.rs
crates/crabe_decision/src/strategy/defender/: defend.rs  defender.rs  stand.rs
crates/crabe_decision/src/strategy/defensive/: bot_contesting.rs  bot_marking.rs  defense_wall.rs  defensor.rs  goal_keeper.rs
crates/crabe_decision/src/strategy/formations/: go_out_from_ball.rs  halt.rs  kick_off.rs  kick_off_ally.rs  kick_off_enemy.rs  latteral_attack.rs  move_away_from_ball.rs  penalty_prep_keeper.rs  prepareKickOff.rs  prepare_free_kick.rs  prepare_freekick_enemy.rs  prepare_goal_kick.rs  prepare_kick_off.rs  prepare_kick_off_ally.rs  prepare_kick_off_enemy.rs  prepare_kickoff.rs  prepare_penalty_enemy.rs  prepare_start.rs  prepare_throw_in.rs  stop.rs
crates/crabe_decision/src/strategy/keeper/: goal.rs  keep.rs  penalty_prep_keeper.rs
crates/crabe_decision/src/strategy/offensive/: attacker.rs  demark.rs  receiver.rs
crates/crabe_decision/src/strategy/placement/: penality.rs
crates/crabe_decision/src/strategy/testing/: aligned.rs  follow_ball.rs  go_left.rs  go_left_keeper.rs  go_right.rs  go_right_keeper.rs  go_to_center.rs  go_to_position.rs  goal_line.rs  move_ball.rs  order.rs  passer.rs  prembule.rs  robots_formation.rs  square.rs  test_basics.rs  test_vision_moveto.rs
crates/crabe_decision/src/utils/: bigbro_decisions.rs  constants.rs  navigation.rs  utils.rs
crates/crabe_filter/: Cargo.toml
crates/crabe_filter/src/: constant.rs  data.rs  filter.rs  lib.rs  post_filter.rs  pre_filter.rs  pre_filters.rs
crates/crabe_filter/src/data/: camera.rs  referee.rs
crates/crabe_filter/src/data/referee/: event.rs
crates/crabe_filter/src/filter/: field_mask.rs  field_side.rs  inactive.rs  passthrough.rs  team_side.rs  velocity.rs  velocity_acceleration.rs
crates/crabe_filter/src/post_filter/: autoref.rs  ball.rs  field_mask.rs  field_side.rs  game_controller.rs  geometry.rs  robot.rs
crates/crabe_filter/src/pre_filter/: common.rs  game_controller.rs  packet_translation_filter.rs  tracker.rs  vision.rs
crates/crabe_filter/src/pre_filters/: vision.rs
crates/crabe_filters/: Cargo.toml
crates/crabe_filters/src/: lib.rs
crates/crabe_framework/: Cargo.toml
crates/crabe_framework/src/: component.rs  config.rs  constant.rs  data.rs  lib.rs
crates/crabe_framework/src/data/: annotation.rs  data_receiver.rs  event.rs  geometry.rs  input.rs  output.rs  receiver.rs  referee.rs  state_handler.rs  tool.rs  world.rs
crates/crabe_framework/src/data/geometry/: field.rs  goal.rs  penalty.rs
crates/crabe_framework/src/data/referee/: event.rs  referee_orders.rs
crates/crabe_framework/src/data/state_handler/: game_state_handler.rs
crates/crabe_framework/src/data/world/: ball.rs  game_data.rs  game_state.rs  robot.rs  stage_info.rs  team.rs
crates/crabe_guard/: Cargo.toml
crates/crabe_guard/src/: constant.rs  lib.rs  pipeline.rs  positive_half.rs  speed.rs
crates/crabe_io/: Cargo.toml
crates/crabe_io/src/: communication.rs  constant.rs  constants.rs  gamepad.rs  league.rs  lib.rs  module.rs  network.rs  pipeline.rs  ssl.rs  tool.rs
crates/crabe_io/src/communication/: multicast_udp_receiver.rs  udp_transceiver.rs  usb_transceiver.rs  websocket_transceiver.rs
crates/crabe_io/src/gamepad/: config.rs
crates/crabe_io/src/league/: game_controller.rs  real.rs  simulator.rs  tracker.rs  usb.rs  utils.rs  vision.rs
crates/crabe_io/src/league/game_controller/: config.rs  game_controller_thread.rs
crates/crabe_io/src/league/real/: config.rs  task.rs
crates/crabe_io/src/league/simulator/: component.rs  config.rs  output.rs  task.rs
crates/crabe_io/src/league/tracker/: tracker_config.rs  tracker_thread.rs
crates/crabe_io/src/league/usb/: config.rs  output.rs
crates/crabe_io/src/league/vision/: config.rs  tracker_thread.rs  vision_thread.rs
crates/crabe_io/src/network/: multicast_receiver.rs  multicast_udp_receiver.rs  udp_transceiver.rs
crates/crabe_io/src/pipeline/: input.rs  output.rs
crates/crabe_io/src/tool/: config.rs  server.rs
crates/crabe_math/: Cargo.toml
crates/crabe_math/src/: lib.rs  shape.rs  vectors.rs
crates/crabe_math/src/shape/: arc.rs  circle.rs  line.rs  line_test.rs  rectangle.rs
crates/crabe_math/src/vectors/: angle_to.rs  vectors.rs
crates/crabe_navigation/: Cargo.toml
crates/crabe_protocol/: Cargo.toml  build.rs  rustfmt.toml
crates/crabe_protocol/protobuf/game_controller/: ssl_gc_game_event.proto
crates/crabe_protocol/src/: protobuf.rs  robot_packet.rs  vision_packet.rs
crates/crabe_tool/: Cargo.toml
crates/crabe_tool/src/: lib.rs
docs/: ssl_rulebook_statemachine.puml
docs/state_machine/: README.md  goalcorner_kick_states.puml  ssl_statemachine_explicited.puml  ssl_statemachine_implemented.puml
(+11 files in other folders)
