[package]
name = "crabe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
log = "0.4.17"
crabe_common = { path = "../crabe_common" }
crabe_io = { path = "../crabe_io" }
crabe_protocol = { path = "../crabe_protocol" }
env_logger = "0.10.0"
ctrlc = "3.2.4"
