[package]
name = "crabe"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
ctrlc = "3.2.5"

crabe_framework = { path = "../crabe_framework" }
crabe_protocol = { path = "../crabe_protocol" }
crabe_io = { path = "../crabe_io" }
crabe_filter = { path = "../crabe_filter" }