[package]
name = "crabe_decision"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
clap = { version = "4.3.3", features = ["derive"] }
nalgebra = "0.32.2"
enum_dispatch = "0.3.11"
crabe_protocol = { path = "../crabe_protocol" }
crabe_framework = { path = "../crabe_framework" }
