[package]
name = "crabe_filter"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
clap = { version = "4.3.4", features = ["derive"] }
serde = { version= "1.0.164", features = ["derive"] }
nalgebra = "0.32.2"
ringbuffer = "0.14.0"
chrono="0.4.26"
crabe_protocol = { path = "../crabe_protocol" }
crabe_framework = { path = "../crabe_framework" }
crabe_math = { path = "../crabe_math"}
