[package]
name = "crabe_filter"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
nalgebra = "0.32.3"
ringbuffer = "0.15.0"
chrono="0.4.31"
crabe_protocol = { path = "../crabe_protocol" }
crabe_framework = { path = "../crabe_framework" }
crabe_math = { path = "../crabe_math"}
