[package]
name = "crabe_filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
clap = { version = "4.1.6", features = ["derive"] }
crabe_protocol = { path = "../crabe_protocol" }
crabe_framework = { path = "../crabe_framework" }