[package]
name = "crabe_framework"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
serde = { version= "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
crabe_protocol = { path = "../crabe_protocol" }
crabe_math = { path = "../crabe_math" }
chrono={ version="0.4.26", features = ["serde"]}
serde_with = "3.2.0"
