[package]
name = "crabe_guard"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
crabe_framework = { path = "../crabe_framework" }
