[package]
name = "crabe_io"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
bytes= "1.5"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
crabe_protocol = { path = "../crabe_protocol" }
crabe_framework = { path = "../crabe_framework" }
flume = "0.11.0"
tokio = { version = "1.33.0", features = ["full"] }
tungstenite = "0.20.1"
futures-util = "0.3.28"
tokio-tungstenite = "0.20.1"
serde = { version= "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serialport = "4.2.2"
serde_with = "3.4.0"
socket2 = "0.5.4"
