[package]
name = "crabe_math"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
serde = { version= "1.0.152", features = ["derive"] }
